--- a/force-app/main/default/classes/SearchApiAddressCtrl.cls
+++ b/force-app/main/default/classes/SearchApiAddressCtrl.cls
@@ -9,7 +9,7 @@ public class SearchApiAddressCtrl {
             Http http = new Http();
             HttpRequest Request = new HttpRequest();
             Request.setMethod('GET');
-            Request.setEndPoint('https://maps.googleapis.com/maps/api/place/autocomplete/json?input='+searchString+'&key=AIzaSyALaRlPFhI9nH_NofftZvcNNqaNL6trq48');
+            Request.setEndPoint('https://maps.googleapis.com/maps/api/place/autocomplete/json?input='+searchString+'&key={APIKEY}');
             HttpResponse Response = http.send(Request);
             if(Response.getStatusCode()==200){
                 System.debug('res.getbody' + Response.getBody());
@@ -39,7 +39,7 @@ public class SearchApiAddressCtrl {
         if(String.isNotBlank(placeId)){
             String strURL = 'https://maps.googleapis.com/maps/api/place/details/json?'
                 + 'placeid=' + EncodingUtil.urlEncode(placeId, 'UTF-8')
-                + '&key=AIzaSyALaRlPFhI9nH_NofftZvcNNqaNL6trq48'; 
+                + '&key={APIKEY}'; 
             Http h = new Http();
             HttpRequest req = new HttpRequest();
             HttpResponse res = new HttpResponse();
